--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Folio - Personal Portfolio Template</title>
+  <title>World of a data scientist</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
@@ -29,7 +29,7 @@
   <link href="css/responsive.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="shortcut icon" href="images/favicon2.png">
 
   <!-- =======================================================
     Theme Name: Folio
@@ -47,7 +47,7 @@
       <div class="container">
 
         <div class="logo">
-          <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+          <a href="index.html"><img src="images/logo4.png" alt="logo"></a>
         </div>
 
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
@@ -55,6 +55,7 @@
         <ul class="nav-menu list-unstyled">
           <li><a href="#header" class="smoothScroll">Home</a></li>
           <li><a href="#about" class="smoothScroll">About</a></li>
+          <li><a href="#ugrad" class="smoothScroll">Publications</a></li>
           <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
           <li><a href="#journal" class="smoothScroll">Blog</a></li>
           <li><a href="#contact" class="smoothScroll">Contact</a></li>
@@ -71,16 +72,12 @@
 
     <div class="container">
       <div class="header-content">
-        <h1>I'm <span class="typed"></span></h1>
-        <p>designer, developeur, photographer</p>
+        <h1>I'm <span class="typed"> Kishore </span></h1>
+        <p>Data Scientist</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-          <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
-          <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
+          <li><a href="www.github.com/kishorevasan"><i class="ion-social-github"></i></a></li>
+          <li><a href="www.linkedin.com/in/kishorevasan"><i class="ion-social-linkedin"></i></a></li>
         </ul>
       </div>
     </div>
@@ -96,7 +93,7 @@
         <div class="col-lg-4 ">
           <div class="div-img-bg">
             <div class="about-img">
-              <img src="images/me.jpg" class="img-responsive" alt="me">
+              <img src="images/me2.jpg" class="img-responsive" alt="me">
             </div>
           </div>
         </div>
@@ -104,8 +101,8 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy crafting brand identities, icons, & ilustration work. </p>
-            <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
+            <p class="p-heading">im a data enthusiast who loves telling stories using data.</p>
+            <p class="separator">I am a undergraduate student at University of Washington pursuing Informatics. My core strengths and interests include network analysis, data visualization, regression analysis and natural language processing. My research work focuses on <b> Scientometrics: Science of Science. </b> I analyze large scale bibliometric data on scholarly literature and examine the progress of science across different entities. I am fortunate to be advised by Dr. Jevin West, Assistant Professor, Information School. </p>
 
           </div>
 
@@ -124,51 +121,57 @@
 
           <div class="services-block">
 
-            <i class="ion-ios-browsers-outline"></i>
-            <span>UI/UX DESIGN</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <i class="ion-social-python"></i>
+            <span>PYTHON</span>
+            <p class="separator">Using the power of a modern language.</p>
+
+          </div>
+
+          <div class="services-block">
+
+            <i class="ion-pie-graph"></i>
+            <span>VISUALIZATION</span>
+            <p class="separator">Convert messy confusing data into informative visualization.</p>
+
+          </div>
+
+
+          <div class="services-block">
+
+            <i class="ion-ios-color-wand-outline"></i>
+            <span>Implementation</span>
+            <p class="separator">Getting things rolling with implementing the entire pipeline. </p>
 
           </div>
 
           <div class="services-block">
 
             <i class="ion-ios-lightbulb-outline"></i>
-            <span>BRAND IDENTITY</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <span>CURIOSITY</span>
+            <p class="separator">Curiosity arises from continuosly thinking about the 'key' takeaway from your project. </p>
 
           </div>
 
-          <div class="services-block">
-
-            <i class="ion-ios-color-wand-outline"></i>
-            <span>WEB DESIGN</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
-          </div>
-
-          <div class="services-block">
-
-            <i class="ion-social-android-outline"></i>
-            <span>MOBILE APPS</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
-          </div>
-
+ 
           <div class="services-block">
 
             <i class="ion-ios-analytics-outline"></i>
             <span>Analytics</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <p class="separator">Analyzing data to gain insights. </p>
 
           </div>
 
           <div class="services-block">
 
-            <i class="ion-ios-camera-outline"></i>
-            <span>PHOTOGRAPHY</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <i class="ion-stats-bars"></i>
+            <span>STATISTICS</span>
+            <p class="separator">Leveraging quantitative science to improve power of results.</p>
 
           </div>
+
+
+
+
 
         </div>
 
@@ -176,6 +179,47 @@
 
   </div>
   <!-- end section services -->
+
+
+
+  <!-- start section ugrad -->
+  <div id="ugrad" class="paddsection">
+
+    <div class="container">
+      <div class="section-title text-center">
+        <h2>Publications</h2>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="ugrad-container">
+        <div class="ugrad-img">
+          <img src="images/ai_bursts_final.png" class="img-responsive" alt="img">
+        </div>
+        <div class="ugrad-descr">
+          <h2>Measuring scientific buzz</h2>
+          <h3> <b>Kishore Vasan</b> and Jevin West</h3>
+          <h6> Towards the proceedings of iConference 2019 (Under Review)</h6>
+         </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="ugrad-container">
+        <div class="ugrad-img">
+          <img src="images/dept_collab_citat.png" class="img-responsive" alt="img">
+        </div>
+        <div class="ugrad-descr">
+          <h2>Is together better? Examining scientific collaboration across multiple authors, departments and institutions.</h2>
+          <h3> Lovenoor Aulck, <b>Kishore Vasan</b>, and Jevin West</h3>
+          <h6> Towards the proceedings of KDD: BigScholar workshop 2018</h6>
+         </div>
+      </div>
+    </div>
+
+  </div>
+  <!-- End section ugrad -->
+
 
 
   <!-- start section portfolio -->
@@ -194,51 +238,71 @@
           <div class="portfolio-list">
 
             <ul class="nav list-unstyled" id="portfolio-flters">
-              <li class="filter filter-active" data-filter=".all">all</li>
-              <li class="filter" data-filter=".branding">branding</li>
-              <li class="filter" data-filter=".mockups">mockups</li>
-              <li class="filter" data-filter=".uikits">ui kits</li>
-              <li class="filter" data-filter=".webdesign">web design</li>
-              <li class="filter" data-filter=".photography">photography</li>
+              <li class="filter filter-active" data-filter=".all">top</li>
+              <li class="filter" data-filter=".branding">data viz</li>
+              <li class="filter" data-filter=".mockups">statistics</li>
+              <li class="filter" data-filter=".uikits">databases</li>
+              <li class="filter" data-filter=".webdesign">hacks</li>
             </ul>
 
           </div>
 
           <div class="portfolio-container">
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
-              <a class="popup-img" href="images/portfolio/1.jpg">
-                <img src="images/portfolio/1.jpg" alt="img">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding mockups">
+              <a class="popup-img" href="simran18.shinyapps.io/the-food-rise">
+                <img src="images/portfolio/the-food-rise.jpg" alt="link">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits photography">
-              <a class="popup-img" href="images/portfolio/2.jpg">
-                <img src="images/portfolio/2.jpg"  alt="img">
+
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding">
+              <a class="popup-img" href="https://kishorevasan.shinyapps.io/child_mortality_and_vaccinations/">
+                <img src="images/portfolio/viz11.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding webdesig photographyn">
-              <a class="popup-img" href="images/portfolio/3.jpg">
-                <img src="images/portfolio/3.jpg" alt="img">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding mockups">
+              <a class="popup-img" href="https://github.com/kishorevasan/info370-finalproject">
+                <img src="images/portfolio/did.jpg" alt="link">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups webdesign photography">
-              <a class="popup-img" href="images/portfolio/4.jpg">
-                <img src="images/portfolio/4.jpg" alt="img">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all uikits">
+              <a class="popup-img" href="https://youtu.be/HvHxbMBxOPU">
+                <img src="images/portfolio/db_erd.jpg" alt="link">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
-              <a class="popup-img" href="images/portfolio/5.jpg">
-                <img src="images/portfolio/5.jpg" alt="img">
+
+
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail branding">
+              <a class="popup-img" href="images/portfolio/coauthorship.jpg">
+                <img src="images/portfolio/coauthorship.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
-              <a class="popup-img" href="images/portfolio/6.jpg">
-                <img src="images/portfolio/6.jpg" alt="img">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
+              <a class="popup-img" href="spotifyplayer.readthedocs.io">
+                <img src="images/portfolio/spotify-car-player.jpg" alt="img">
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
+              <a class="popup-img" href="https://github.com/kishorevasan/AquaMarine">
+                <img src="images/portfolio/serve-it.jpg" alt="img">
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
+              <a class="popup-img" href="sneakpeek.readthedocs.io">
+                <img src="images/portfolio/security-cam.jpg" class="img-responsive" alt="img">
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
+              <a class="popup-img" href="https://youtu.be/fuOkgZTxEAY">
+                <img src="images/portfolio/pong.jpg" alt="link">
               </a>
             </div>
 
@@ -249,6 +313,7 @@
 
   </div>
   <!-- End section portfolio -->
+
 
 
   <!-- start section journal -->
@@ -267,51 +332,18 @@
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
-              <a href="blog-single.html"><img src="images/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+              <a href="kdd_summary.html"><img src="images/kdd_2018.jpg" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
 
-                <h4><a href="blog-single.html">SO LETS MAKE THE MOST IS BEAUTIFUL</a></h4>
-                <p class="separator">To an English person, it will seem like simplified English
+                <h4><a href="kdd_summary.html">Network Embedding at KDD</a></h4>
+                <p class="separator"> This year at KDD, network embedding topic dominated most of the papers and talks. In this blog post, I write about network embedding and my key takeaways from attending KDD 2018.
                 </p>
 
               </div>
 
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="journal-info">
-
-              <a href="blog-single.html"><img src="images/blog-post-2.jpg" class="img-responsive" alt="img"></a>
-
-              <div class="journal-txt">
-
-                <h4><a href="#blog-single.html">WE'RE GONA MAKE DREAMS COMES</a></h4>
-                <p class="separator">To an English person, it will seem like simplified English
-                </p>
-
-              </div>
-
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="journal-info">
-
-              <a href="blog-single.html"><img src="images/blog-post-3.jpg" class="img-responsive" alt="img"></a>
-
-              <div class="journal-txt">
-
-                <h4><a href="blog-single.html">NEW LIFE CIVILIZATIONS TO BOLDLY</a></h4>
-                <p class="separator">To an English person, it will seem like simplified English
-                </p>
-
-              </div>
-
-            </div>
-          </div>
-
         </div>
       </div>
     </div>
@@ -332,56 +364,13 @@
               <h2 class="mb-30">GET IN TOUCH</h2>
 
               <ul class="contact-details">
-                <li><span>23 Main, Street</span></li>
-                <li><span>New York, United States</span></li>
-                <li><span>+88 01912704287</span></li>
-                <li><span>example@example.com</span></li>
+                <li><span>Seattle</span></li>
+                <li><span>Washington, United States</span></li>
+                <li><span>linkedin.com/in/kishorevasan</span></li>
+                <li><span>kishorev@uw.edu</span></li>
               </ul>
 
             </div>
-          </div>
-
-          <div class="col-lg-6">
-            <form action="" method="post" role="form" class="contactForm">
-              <div class="row">
-
-                <div id="sendmessage">Your message has been sent. Thank you!</div>
-                <div id="errormessage"></div>
-
-                <div class="col-lg-6">
-                  <div class="form-group contact-block1">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                    <div class="validation"></div>
-                  </div>
-                </div>
-
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                    <div class="validation"></div>
-                  </div>
-                </div>
-
-                <div class="col-lg-12">
-                  <div class="form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                    <div class="validation"></div>
-                  </div>
-                </div>
-
-                <div class="col-lg-12">
-                  <div class="form-group">
-                    <textarea class="form-control" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                    <div class="validation"></div>
-                  </div>
-                </div>
-
-                <div class="col-lg-12">
-                  <input type="submit" class="btn btn-defeault btn-send" value="Send message">
-                </div>
-
-              </div>
-            </form>
           </div>
         </div>
       </div>
@@ -396,27 +385,25 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-          <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
-          <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
+           <li><a href="www.github.com/kishorevasan"><i class="ion-social-github"></i></a></li>
+          <li><a href="www.linkedin.com/in/kishorevasan"><i class="ion-social-linkedin"></i></a></li>
+
         </ul>
 
       </div>
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
-
+      <p>&copy; Copyrights Kishore. All rights reserved.</p>
+<!--
       <div class="credits">
-        <!--
+        
           All the links in the footer should remain intact.
           You can delete the links only if you purchased the pro version.
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
-        -->
+        
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+-->
+        </div>
 
     </div>
   </div>
