add href to images

--- a/index.html
+++ b/index.html
@@ -250,26 +250,26 @@
           <div class="portfolio-container">
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding mockups">
-              <a class="popup-img" href="simran18.shinyapps.io/the-food-rise">
+              <a href="simran18.shinyapps.io/the-food-rise">
                 <img src="images/portfolio/the-food-rise.jpg" alt="link">
               </a>
             </div>
 
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding">
-              <a class="popup-img" href="https://kishorevasan.shinyapps.io/child_mortality_and_vaccinations/">
+              <a href="https://kishorevasan.shinyapps.io/child_mortality_and_vaccinations/">
                 <img src="images/portfolio/viz11.jpg" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding mockups">
-              <a class="popup-img" href="https://github.com/kishorevasan/info370-finalproject">
+              <a href="https://github.com/kishorevasan/info370-finalproject">
                 <img src="images/portfolio/did.jpg" alt="link">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all uikits">
-              <a class="popup-img" href="https://youtu.be/HvHxbMBxOPU">
+              <a href="https://youtu.be/HvHxbMBxOPU">
                 <img src="images/portfolio/db_erd.jpg" alt="link">
               </a>
             </div>
@@ -283,25 +283,25 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a class="popup-img" href="spotifyplayer.readthedocs.io">
+              <a href="spotifyplayer.readthedocs.io">
                 <img src="images/portfolio/spotify-car-player.jpg" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a class="popup-img" href="https://github.com/kishorevasan/AquaMarine">
+              <a href="https://github.com/kishorevasan/AquaMarine">
                 <img src="images/portfolio/serve-it.jpg" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a class="popup-img" href="sneakpeek.readthedocs.io">
+              <a href="sneakpeek.readthedocs.io">
                 <img src="images/portfolio/security-cam.jpg" class="img-responsive" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a class="popup-img" href="https://youtu.be/fuOkgZTxEAY">
+              <a href="https://youtu.be/fuOkgZTxEAY">
                 <img src="images/portfolio/pong.jpg" alt="link">
               </a>
             </div>
