fix href in images

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <div class="portfolio-container">
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding mockups">
-              <a href="simran18.shinyapps.io/the-food-rise">
+              <a href="http://simran18.shinyapps.io/the-food-rise">
                 <img src="images/portfolio/the-food-rise.jpg" alt="link">
               </a>
             </div>
@@ -283,7 +283,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a href="spotifyplayer.readthedocs.io">
+              <a href="http://spotifyplayer.readthedocs.io">
                 <img src="images/portfolio/spotify-car-player.jpg" alt="img">
               </a>
             </div>
@@ -295,7 +295,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a href="sneakpeek.readthedocs.io">
+              <a href="http://sneakpeek.readthedocs.io">
                 <img src="images/portfolio/security-cam.jpg" class="img-responsive" alt="img">
               </a>
             </div>
