--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <img src="images/dept_collab_citat.png" class="img-responsive" alt="img">
         </div>
         <div class="ugrad-descr">
-          <h2>Is together better? Examining scientific collaboration across multiple authors, departments and institutions.</h2>
+          <h2><a href = "https://arxiv.org/abs/1809.04093"> Is together better? Examining scientific collaboration across multiple authors, departments and institutions.</a></h2>
           <h3> Lovenoor Aulck, <b>Kishore Vasan</b>, and Jevin West</h3>
           <h6> Towards the proceedings of KDD: BigScholar workshop 2018</h6>
          </div>
