--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <p>Data Scientist</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="www.github.com/kishorevasan"><i class="ion-social-github"></i></a></li>
-          <li><a href="www.linkedin.com/in/kishorevasan"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://www.github.com/kishorevasan"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/kishorevasan"><i class="ion-social-linkedin"></i></a></li>
         </ul>
       </div>
     </div>
@@ -385,8 +385,8 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-           <li><a href="www.github.com/kishorevasan"><i class="ion-social-github"></i></a></li>
-          <li><a href="www.linkedin.com/in/kishorevasan"><i class="ion-social-linkedin"></i></a></li>
+           <li><a href="https://www.github.com/kishorevasan"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/kishorevasan"><i class="ion-social-linkedin"></i></a></li>
 
         </ul>
 
