update the blog website and minor changes to home page

--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
         <p>Data Scientist</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="https://www.github.com/kishorevasan"><i class="ion-social-github"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/kishorevasan"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://www.github.com/kishorevasan" target="blank"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/kishorevasan" target="blank"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://scholar.google.com/citations?user=yMgHp8wAAAAJ&hl=en&oi=ao" target="blank"><i class="ion-social-google"></i></a></li>
         </ul>
       </div>
     </div>
@@ -93,7 +94,7 @@
         <div class="col-lg-4 ">
           <div class="div-img-bg">
             <div class="about-img">
-              <img src="images/me2.jpg" class="img-responsive" alt="me">
+              <img src="images/IMG_2666.jpg" class="img-responsive" alt="me">
             </div>
           </div>
         </div>
@@ -102,8 +103,7 @@
           <div class="about-descr">
 
             <p class="p-heading">im a data enthusiast who loves telling stories using data.</p>
-            <p class="separator">I am a undergraduate student at University of Washington pursuing Informatics. My core strengths and interests include network analysis, data visualization, regression analysis and natural language processing. My research work focuses on <b> Scientometrics: Science of Science. </b> I analyze large scale bibliometric data on scholarly literature and examine the progress of science across different entities. I am fortunate to be advised by Dr. Jevin West, Assistant Professor, Information School. </p>
-
+            <p class="separator">I am a undergraduate student at University of Washington pursuing Informatics. My core strengths and interests include network analysis, data visualization, regression analysis and natural language processing. I work at <strong><a href="http://datalab.ischool.uw.edu" target="blank" style="color: inherit;">DataLab</a></strong> as an undergraduate researcher. My research work focuses on <strong style="font-weight: 900;"> Scientometrics: Science of Science. </strong> I analyze large scale bibliometric data on scholarly literature and examine the progress of science across different entities. I am fortunate to be advised by Dr. Jevin West, Assistant Professor, Information School. </p>
           </div>
 
         </div>
@@ -116,75 +116,56 @@
   <!-- start section services -->
   <div id="services">
     <div class="container">
-
         <div class="services-carousel owl-theme">
 
           <div class="services-block">
-
             <i class="ion-social-python"></i>
             <span>PYTHON</span>
             <p class="separator">Using the power of a modern language.</p>
-
           </div>
-
+          
           <div class="services-block">
-
             <i class="ion-pie-graph"></i>
             <span>VISUALIZATION</span>
             <p class="separator">Convert messy confusing data into informative visualization.</p>
-
           </div>
 
-
           <div class="services-block">
-
             <i class="ion-ios-color-wand-outline"></i>
             <span>Implementation</span>
             <p class="separator">Getting things rolling with implementing the entire pipeline. </p>
-
           </div>
 
           <div class="services-block">
-
             <i class="ion-ios-lightbulb-outline"></i>
             <span>CURIOSITY</span>
             <p class="separator">Curiosity arises from continuosly thinking about the 'key' takeaway from your project. </p>
-
           </div>
 
- 
           <div class="services-block">
-
             <i class="ion-ios-analytics-outline"></i>
             <span>Analytics</span>
             <p class="separator">Analyzing data to gain insights. </p>
-
           </div>
 
           <div class="services-block">
-
             <i class="ion-stats-bars"></i>
             <span>STATISTICS</span>
             <p class="separator">Leveraging quantitative science to improve power of results.</p>
-
           </div>
 
-
-
-
-
+          <div class="services-block">
+            <i class="ion-university"></i>
+            <span>RESEARCH</span>
+            <p class="separator">Creating novel methods to solve key problems in research at a university lab.</p>
+          </div>
         </div>
-
     </div>
-
   </div>
   <!-- end section services -->
 
-
-
   <!-- start section ugrad -->
   <div id="ugrad" class="paddsection">
-
     <div class="container">
       <div class="section-title text-center">
         <h2>Publications</h2>
@@ -220,11 +201,8 @@
   </div>
   <!-- End section ugrad -->
 
-
-
   <!-- start section portfolio -->
   <div id="portfolio" class="text-center paddsection">
-
     <div class="container">
       <div class="section-title text-center">
         <h2>My Portfolio</h2>
@@ -234,9 +212,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-
           <div class="portfolio-list">
-
             <ul class="nav list-unstyled" id="portfolio-flters">
               <li class="filter filter-active" data-filter=".all">top</li>
               <li class="filter" data-filter=".branding">data viz</li>
@@ -244,37 +220,32 @@
               <li class="filter" data-filter=".uikits">databases</li>
               <li class="filter" data-filter=".webdesign">hacks</li>
             </ul>
-
           </div>
 
           <div class="portfolio-container">
-
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding mockups">
-              <a href="http://simran18.shinyapps.io/the-food-rise">
+              <a href="http://simran18.shinyapps.io/the-food-rise" target="blank">
                 <img src="images/portfolio/the-food-rise.jpg" alt="link">
               </a>
             </div>
 
-
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding">
-              <a href="https://kishorevasan.shinyapps.io/child_mortality_and_vaccinations/">
+              <a href="https://kishorevasan.shinyapps.io/child_mortality_and_vaccinations/" target="blank">
                 <img src="images/portfolio/viz11.jpg" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding mockups">
-              <a href="https://github.com/kishorevasan/info370-finalproject">
+              <a href="https://github.com/kishorevasan/info370-finalproject" target="blank">
                 <img src="images/portfolio/did.jpg" alt="link">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all uikits">
-              <a href="https://youtu.be/HvHxbMBxOPU">
+              <a href="https://youtu.be/HvHxbMBxOPU" target="blank">
                 <img src="images/portfolio/db_erd.jpg" alt="link">
               </a>
             </div>
-
-
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail branding">
               <a class="popup-img" href="images/portfolio/coauthorship.jpg">
@@ -283,38 +254,34 @@
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a href="http://spotifyplayer.readthedocs.io">
+              <a href="http://spotifyplayer.readthedocs.io" target="blank">
                 <img src="images/portfolio/spotify-car-player.jpg" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a href="https://github.com/kishorevasan/AquaMarine">
+              <a href="https://github.com/kishorevasan/AquaMarine" target="blank">
                 <img src="images/portfolio/serve-it.jpg" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a href="http://sneakpeek.readthedocs.io">
+              <a href="http://sneakpeek.readthedocs.io" target="blank">
                 <img src="images/portfolio/security-cam.jpg" class="img-responsive" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail webdesign">
-              <a href="https://youtu.be/fuOkgZTxEAY">
+              <a href="https://youtu.be/fuOkgZTxEAY" target="blank">
                 <img src="images/portfolio/pong.jpg" alt="link">
               </a>
             </div>
-
-          </div>
+         </div>
         </div>
       </div>
     </div>
-
   </div>
   <!-- End section portfolio -->
-
-
 
   <!-- start section journal -->
   <div id="journal" class="text-left paddsection">
@@ -328,26 +295,20 @@
     <div class="container">
       <div class="journal-block">
         <div class="row">
-
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
-
               <a href="kdd_summary.html"><img src="images/kdd_2018.jpg" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
-
                 <h4><a href="kdd_summary.html">Network Embedding at KDD</a></h4>
                 <p class="separator"> This year at KDD, network embedding topic dominated most of the papers and talks. In this blog post, I write about network embedding and my key takeaways from attending KDD 2018.
                 </p>
-
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </div>
-
   </div>
   <!-- End section journal -->
 
@@ -357,10 +318,8 @@
     <div class="container">
       <div class="contact-block1">
         <div class="row">
-
           <div class="col-lg-6">
             <div class="contact-contact">
-
               <h2 class="mb-30">GET IN TOUCH</h2>
 
               <ul class="contact-details">
@@ -385,14 +344,13 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-           <li><a href="https://www.github.com/kishorevasan"><i class="ion-social-github"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/kishorevasan"><i class="ion-social-linkedin"></i></a></li>
-
+           <li><a href="https://www.github.com/kishorevasan" target="blank"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/kishorevasan" target="blank"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://scholar.google.com/citations?user=yMgHp8wAAAAJ&hl=en&oi=ao" target="blank"><i class="ion-social-google"></i></a></li>
         </ul>
-
       </div>
+      <p>&copy; Copyrights Kishore. 2018. All rights reserved.</p>
 
-      <p>&copy; Copyrights Kishore. All rights reserved.</p>
 <!--
       <div class="credits">
         
@@ -404,7 +362,6 @@
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
 -->
         </div>
-
     </div>
   </div>
   <!-- End section footer -->
@@ -423,7 +380,6 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-
+  
 </body>
-
 </html>
