--- a/blog-grid.html
+++ b/blog-grid.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Folio - Blog Grid</title>
+  <title>World of a data scientist</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
@@ -56,13 +56,12 @@
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
 
         <ul class="nav-menu list-unstyled">
-          <li><a href="#homee" class="smoothScroll">Home</a></li>
-          <li><a href="#about" class="smoothScroll">About</a></li>
-          <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-          <li><a href="#blog" class="smoothScroll">Blog</a></li>
-          <li><a href="#contact" class="smoothScroll">Contact</a></li>
+          <li><a href="index.html#homee" class="smoothScroll">Home</a></li>
+          <li><a href="index.html#about" class="smoothScroll">About</a></li>
+          <li><a href="index.html#portfolio" class="smoothScroll">Portfolio</a></li>
+          <li><a href="index.html#blog" class="smoothScroll">Blog</a></li>
+          <li><a href="index.html#contact" class="smoothScroll">Contact</a></li>
         </ul>
-
       </div>
     </div>
   </nav>
@@ -70,7 +69,6 @@
 
   <!-- start section journal -->
   <div id="journal-blog" class="text-left  paddsections">
-
     <div class="container">
       <div class="section-title text-center">
         <h2>journal</h2>
@@ -125,7 +123,6 @@
                 </p>
 
               </div>
-
             </div>
           </div>
 
@@ -135,7 +132,7 @@
               <a href="blog-single.html"><img src="images/blog-post-1.jpg" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
-
+                
                 <h4><a href="blog-single.html">SO LETS MAKE THE MOST IS BEAUTIFUL</a></h4>
                 <p class="separator">To an English person, it will seem like simplified English
                 </p>
