Add cv and update google icon

--- a/kdd_summary.html
+++ b/kdd_summary.html
@@ -33,7 +33,7 @@
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon.png">
-
+   <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
   <!-- =======================================================
     Theme Name: Folio
     Theme URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
@@ -129,7 +129,8 @@
         <ul class="list-unstyled">
            <li><a href="https://www.github.com/kishorevasan" target="blank"><i class="ion-social-github"></i></a></li>
           <li><a href="https://www.linkedin.com/in/kishorevasan" target="blank"><i class="ion-social-linkedin"></i></a></li>
-          <li><a href="https://scholar.google.com/citations?user=yMgHp8wAAAAJ&hl=en&oi=ao" target="blank"><i class="ion-social-google"></i></a></li>
+          <li><a href="https://scholar.google.com/citations?user=yMgHp8wAAAAJ&hl=en&oi=ao" target="blank"><i class="ai ai-google-scholar ai-x"></i></a></li>
+          <li><a href="http://kishorevasan.me/cv/resume-kishore.pdf" target="blank"><i class="ai ai-cv ai-x"></i></a></li>
         </ul>
       </div>
       <p>&copy; Copyrights Kishore. 2018. All rights reserved.</p>
