--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon2.png">
 
+  <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
   <!-- =======================================================
     Theme Name: Folio
     Theme URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
@@ -78,7 +79,8 @@
         <ul class="list-unstyled list-social">
           <li><a href="https://www.github.com/kishorevasan" target="blank"><i class="ion-social-github"></i></a></li>
           <li><a href="https://www.linkedin.com/in/kishorevasan" target="blank"><i class="ion-social-linkedin"></i></a></li>
-          <li><a href="https://scholar.google.com/citations?user=yMgHp8wAAAAJ&hl=en&oi=ao" target="blank"><i class="ion-social-google"></i></a></li>
+          <li><a href="https://scholar.google.com/citations?user=yMgHp8wAAAAJ&hl=en&oi=ao" target="blank"><i class="ai ai-google-scholar ai-3x"></i></i></a></li>
+          <li><a href="http://kishorevasan.me/cv/resume-kishore.pdf" target="blank"><i class="ai ai-cv ai-x"></i></a></li>
         </ul>
       </div>
     </div>
@@ -346,7 +348,8 @@
         <ul class="list-unstyled">
            <li><a href="https://www.github.com/kishorevasan" target="blank"><i class="ion-social-github"></i></a></li>
           <li><a href="https://www.linkedin.com/in/kishorevasan" target="blank"><i class="ion-social-linkedin"></i></a></li>
-          <li><a href="https://scholar.google.com/citations?user=yMgHp8wAAAAJ&hl=en&oi=ao" target="blank"><i class="ion-social-google"></i></a></li>
+          <li><a href="https://scholar.google.com/citations?user=yMgHp8wAAAAJ&hl=en&oi=ao" target="blank"><i class="ai ai-google-scholar ai-x"></i></a></li>
+          <li><a href="http://kishorevasan.me/cv/resume-kishore.pdf" target="blank"><i class="ai ai-cv ai-x"></i></a></li>
         </ul>
       </div>
       <p>&copy; Copyrights Kishore. 2018. All rights reserved.</p>
@@ -380,6 +383,6 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-  
+
 </body>
 </html>
