--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>World of a data scientist</title>
+  <title>Kishore Vasan | Data Scientist</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
@@ -106,7 +106,7 @@
         <div class="col-lg-4 ">
           <div class="div-img-bg">
             <div class="about-img">
-              <img src="images/IMG_2666.jpg" class="img-responsive" alt="me">
+              <img src="images/me2.jpg" class="img-responsive" alt="me">
             </div>
           </div>
         </div>
@@ -115,7 +115,7 @@
           <div class="about-descr">
 
             <p class="p-heading">im a data enthusiast who loves telling stories using data.</p>
-            <p class="separator">I am a undergraduate student at University of Washington pursuing Informatics. My core strengths and interests include network analysis, data visualization, regression analysis and natural language processing. I work at <strong><a href="http://datalab.ischool.uw.edu" target="blank" style="color: inherit;">DataLab</a></strong> as an undergraduate researcher. My research work focuses on <strong style="font-weight: 900;"> Scientometrics: Science of Science. </strong> I analyze large scale bibliometric data on scholarly literature and examine the progress of science across different entities. I am fortunate to be advised by Dr. Jevin West, Assistant Professor, Information School. </p>
+            <p class="separator">I am a student at University of Washington pursuing Informatics. My core strengths and interests include network science, data visualization, regression analysis and natural language processing. I am an undergraduate researcher at <strong><a href="http://datalab.ischool.uw.edu" target="blank" style="color: inherit;">DataLab</a></strong>. My research work focuses on <strong style="font-weight: 900;"> Scientometrics: Science of Science. </strong> I analyze large scale bibliometric data on scholarly literature and examine the progress of science across different entities. I am fortunate to be advised by Dr. Jevin West, Assistant Professor, Information School. </p>
           </div>
 
         </div>
@@ -192,7 +192,7 @@
         <div class="ugrad-descr">
           <h2>Measuring scientific buzz</h2>
           <h3> <b>Kishore Vasan</b> and Jevin West</h3>
-          <h6> Towards the proceedings of iConference 2019 (Under Review)</h6>
+          <h6> Towards the proceedings of iConference 2019</h6>
          </div>
       </div>
     </div>
@@ -203,7 +203,7 @@
           <img src="images/dept_collab_citat.png" class="img-responsive" alt="img">
         </div>
         <div class="ugrad-descr">
-          <h2><a href = "https://arxiv.org/abs/1809.04093"> Is together better? Examining scientific collaboration across multiple authors, departments and institutions.</a></h2>
+          <h2><a href = "https://arxiv.org/abs/1809.04093" target="_blank"> Is together better? Examining scientific collaboration across multiple authors, departments and institutions</a></h2>
           <h3> Lovenoor Aulck, <b>Kishore Vasan</b>, and Jevin West</h3>
           <h6> Towards the proceedings of KDD: BigScholar workshop 2018</h6>
          </div>
