added paper href

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <img src="images/ai_bursts_final.png" class="img-responsive" alt="img">
         </div>
         <div class="ugrad-descr">
-          <h2>Measuring scientific buzz</h2>
+          <h2><a href="https://arxiv.org/abs/1812.03249" target-"_blank"> Measuring scientific buzz</a></h2>
           <h3> <b>Kishore Vasan</b> and Jevin West</h3>
           <h6> Towards the proceedings of iConference 2019</h6>
          </div>
