--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kishore Vasan | Data Scientist</title>
+  <title>Kishore Vasan | UW Seattle</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
@@ -314,6 +314,17 @@
               <div class="journal-txt">
                 <h4><a href="kdd_summary.html">Network Embedding at KDD</a></h4>
                 <p class="separator"> This year at KDD, network embedding topic dominated most of the papers and talks. In this blog post, I write about network embedding and my key takeaways from attending KDD 2018.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="journal-info">
+              <a href="iconf_summary.html"><img src="images/iconf_banquet.jpg" class="img-responsive" alt="img"></a>
+
+              <div class="journal-txt">
+                <h4><a href="iconf_summary.html">Who is an Information Scientist?</a></h4>
+                <p class="separator"> The definition of Information Science is very broad and often overlapping with other domains. What defines an Information Science paper? In this blog post, I write about identity management as an Information Scientist and key takeaways from iConference 2019.
                 </p>
               </div>
             </div>
