update alt text

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
 
     <div class="w3-col m3">
-      <img src="images/projects/covid_trials.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      <img src="images/projects/covid_trials.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Shiny app to track Clinical Trials">
       <p><i> <a href="https://kishorevasan.shinyapps.io/coronavirus_clinical_trials/" target="_blank">COVID Clinical Trials Tracker</a></i></p>
     </div>
 
