--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@ function toggleFunction() {
         x.className = x.className.replace(" w3-show", "");
     }
 }
+</script>
+
+<script>
 
 var frmvalidator = new Validator(“contactform”);
 frmvalidator.addValidation(“name”,”req”,”Please provide your name”);
