add funder info

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity"> <span class="w3-hide-small">KISHORE</span> VASAN</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity"> KISHORE VASAN</span>
   </div>
 </div>
 
@@ -57,7 +57,7 @@
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Kishore Vasan</b></p><br>
-      <img src="images/profile.jpg" class="w3-round w3-image" alt="Photo of Me" width="300" height="333">
+      <img id="my_img" src="images/profile.jpg" class="w3-round w3-image" alt="Photo of Me" width="300" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -67,6 +67,31 @@
   </div>
 
 </div>
+
+</div>
+
+<!-- Container (Portfolio Section) -->
+<div class="w3-container w3-sand w3-padding-16">
+  <p>Thanks to the opportunities and support from various researchers and organizations.  </p>
+  <div class="row">
+    <div class="column">
+        <img src="images/funders/datalab-logo.jpg" alt="Snow" style="width:100%;">
+    </div>
+    <div class="column">
+      <img src="images/funders/mary-gates.jpg" alt="Forest" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="images/funders/gates-foundation.jpg" alt="Mountains" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="images/funders/netsci-institute.jpg" alt="Snow" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="images/funders/ai2.jpg" alt="Snow" style="width:100%">
+    </div>
+
+</div>
+
 
 </div>
 
