--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <a href="#publications" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-pencil"></i> PUBLICATIONS</a>
     <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PROJECTS</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
-    </a>
+    <a href="https://blacklivesmatter.com/" target="_blank"><img class = "w3-bar-item w3-hide-small w3-right" src="./images/blm.jpg" width="40" height="40"></a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -37,7 +35,6 @@
     <a href="#publications" class="w3-bar-item w3-button" onclick="toggleFunction()">PUBLICATIONS</a>
     <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PROJECTS</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
   </div>
 </div>
 
