add research motivation

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p><b> Research Motivation.</b> Describe research work + motivation. </p>
+      <p><b> Research Motivation.</b> Scientists yearn to receive huge grants for long periods of time. It enables researchers to purue the projects of their interest and is a key component for academic growth. Research funding is critical because it provides monetary support to hire associates, buy equipments, travel to present their research, all of which contitutes <i>research work</i>. However, much is still unknown about the dynamics that govern the scientific funding process. How do funders decide to fund specific scientists? Is the grant successful in delivering the desired targets? As a funder, what areas should I fund and importantly, who should I fund with? Answering these questions using machine learning, network science, and computational methods will help discern key dynamics that determine and <i>over-shadow</i> much of the science that we do. At a broad level, my research work focusses on measuring the success of funding models through grants and publications. </p>
     </div>
   </div>
 
