--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel='stylesheet' href = "style.css">
 
+<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+
+
 <link rel="shortcut icon" href="images/favicon2.png">
 
 
@@ -240,15 +243,15 @@
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off">
+<footer class="w3-center w3-black w3-padding-32 w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="./resume-kishore.pdf" target="_blank"><i class="fa fa-file w3-hover-opacity" aria-hidden="true"></i></a>
+    <a href="https://scholar.google.com/citations?user=yMgHp8wAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square w3-hover-opacity" aria-hidden="true"></i></a>
     <a href="https://github.com/kishorevasan" target="_blank"><i class="fa fa-github w3-hover-opacity" aria-hidden="true"></i></a>
     <a href="https://twitter.com/kishore__vasan" target="_blank"><i class="fa fa-twitter w3-hover-opacity" aria-hidden="true"></i></a>
     <a href="https://linkedin.com/in/kishorevasan" target="_blank"><i class="fa fa-linkedin w3-hover-opacity" aria-hidden="true"></i></a>
     <a href="https://www.flickr.com/photos/152201202@N02/" target="_blank"><i class="fa fa-flickr w3-hover-opacity" aria-hidden="true"></i></a>
-
 
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
