add funder statement

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 
 <!-- Container (Portfolio Section) -->
 <div class="w3-container w3-sand w3-padding-16">
-  <p>Thanks to the opportunities and support from various researchers and organizations.  </p>
+  <p>Thanks to the opportunities and support from various researchers and organizations that make my research dreams possible. </p>
+
+<!--
   <div class="row">
     <div class="column">
         <img src="images/funders/datalab-logo.jpg" alt="Snow" style="width:100%;">
@@ -89,7 +91,7 @@
     <div class="column">
       <img src="images/funders/ai2.jpg" alt="Snow" style="width:100%">
     </div>
-
+-->
 </div>
 
 
