--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
   <li><h5>SciSight: Combining faceted navigation and research group detection for COVID-19 exploratory scientific search</h5></li>
     <ul>
         <li id ="authornames"> Tom Hope, Jason Portenoy*, <b>Kishore Vasan</b>*, Jonathon Borchardt*, Eric Horvitz, Daniel Weld, Marti Hearst, Jevin West </li>
+        <li> Also accepted to EMNLP Demo track.</li>
         <li> [<a href="https://arxiv.org/pdf/2005.12668.pdf" target="_blank">Link</a>]</li>
     </ul>
 </ul>
