update clinical funding paper

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
 <h4 id ="pubsection"><u> Journal Publications </u></h4>
 
 <ul>
-  <li><h5>Who to fund with? Examining the social structure of co-funding in clinical science.</h5></li>
+  <li><h5>The hidden influence of communities in collaborative funding of clinical science</h5></li>
     <ul>
-        <li id ="authornames"> <b>Kishore Vasan</b>, Carl Bergstrom, Jevin West</li>
-        <li> Journal: TBD </li>
+        <li id ="authornames"> <b>Kishore Vasan</b> and Jevin West</li>
+        <li> Under Review: Royal Society Open Science </li>
         <li> Also presented at NetSci-X 2020 conference in Tokyo, Japan.</li>
     </ul>
 </ul>
